k8s/event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-event
  namespace: reservation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-event
  template:
    metadata:
      labels:
        app: reservation-event
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: event
          image: ghcr.io/yoshikrit/reservation-reservation-service:1
          imagePullPolicy: Always
          command: ["./event"]
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
              ephemeral-storage: 50Mi
            limits:
              cpu: 100m
              memory: 64Mi
              ephemeral-storage: 100Mi
