k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reservation-ingress
  namespace: reservation
spec:
  ingressClassName: nginx
  rules:
    - host: reservation.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reservation-api
                port:
                  number: 8081
